@@ -1,5 +1,11 @@
 2009-10-24  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Record_Type>: When
+	processing the parent type, build the COMPONENT_REF for a discriminant
+	with the proper type.
+
+2009-10-24  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* init.c (__gnat_adjust_context_for_raise): Mention _Unwind_GetIPInfo.
 	* gcc-interface/Makefile.in (GNATLIBCFLAGS_FOR_C): Add HAVE_GETIPINFO.
 	Pass GNATLIBCFLAGS_FOR_C to recursive invocations.
